--- a/src/index.css
+++ b/src/index.css
@@ -200,9 +200,9 @@ code {
     padding-left:40px !important;
     padding-right:40px !important;
   }
-  .footer-padding {
-    padding-left: 40px;
-    padding-right: 40px;
+  .page-padding {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
   }
 }
 
@@ -294,9 +294,9 @@ code {
   .semibold-lg-ar {
     font-family: "CircularAr-SemiBold";
   }
-  .footer-padding {
-    padding-left: 40px;
-    padding-right: 40px;
+  .page-padding {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
   }
 }
 
@@ -400,9 +400,9 @@ code {
   .semibold-sm-ar {
     font-family: "CircularAr-SemiBold";
   }
-  .footer-padding {
-    padding-left: 16px;
-    padding-right: 16px;
+  .page-padding {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
   }
 }
 
